--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-icons": "^4.12.0",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.18.0",
     "react-toastify": "^9.1.3",
